added comment in order info & add image by default
