# docs/swagger.json
@@ -1133,8 +1133,9 @@
                 "client": {
                     "$ref": "#/definitions/apiserver.structBaseUserInfo"
                 },
-                "coordinates": {
-                    "$ref": "#/definitions/model.Location"
+                "comment": {
+                    "description": "Location  model.Location      `json:\"coordinates\"`",
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
